# basilisk-zed

./: Cargo.toml  README.md  extension.toml
debug_adapter_schemas/: basilisk-debug.json
languages/python/: brackets.scm  config.toml  highlights.scm  indents.scm  injections.scm  outline.scm  runnables.scm  textobjects.scm
src/: lib.rs  logic.rs  logic_tests.rs
themes/: basilisk-dark.json
